admission-controller-config.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "trivy-scanner.example.com"
webhooks:
- name: "trivy-scanner.example.com"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    url: https://my_hostname:443/validate
    caBundle: "LStLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURjakNDQWxxZ0F3SUJBZ0lVUTZPVmRCdWxablVCZzZubkZ1U1o1VTJGcjFvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1FqRUxNQWtHQTFVRUJoTUNXRmd4RlRBVEJnTlZCQWNNREVSbFptRjFiSFFnUTJsMGVURWNNQm9HQTFVRQpDZ3dUUkdWbVlYVnNkQ0JEYjIxd1lXNTVJRXgwWkRBZUZ3MHlNakExTWpVeE1ERTJNakZhRncwek1qQTFNakl4Ck1ERTJNakZhTURReE1qQXdCZ05WQkFNTUtXdDJiUzB3TkMxbmRXVnpkREkzTG1oMk1pNXNZV0l1Wlc1bkxtSnYKY3k1eVpXUm9ZWFF1WTI5dE1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBemRsZQo5Q2xNa1d3d0JhY3 [...]
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
